--- a/src/components/FormLogin/FormLogin.css
+++ b/src/components/FormLogin/FormLogin.css
@@ -1,39 +1,64 @@
 .mainlogin{
-    width: 250px;
-    height: auto;
-    background-color: white;
+    width: 100%;
+    height: 100%;
+    background-color: black;
     border: 1px solid black;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.588);
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
-    padding: 10px;
-    gap: 20px;
+    justify-content: center;
 }
+
 .mainlogin form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 20px;
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    padding: 20px;
+    border-radius: 10px;
 }
 .mainlogin div {
     display: flex;
     flex-direction: column;
-}
-.mainlogin h2, h3, label, input {
-    color: black;
-    font-size: 16px;
-}
-.mainlogin input {
-    padding: 5px;
+    align-items: center;
+    width: 100%;
+
 }
 
-.mainlogin button {
-    color: black;
+.mainlogin input {
+    padding: 5px;
+    border: none;
+    background-color: rgb(28, 28, 28);
+    color: white;
     border-radius: 5px;
-    border: 1px solid black;
+    height: 40px;
+    width: 80%;
+    max-width: 300px;
+    padding-left: 20px;
+    font-style: italic;
+}
+.mainlogin input:focus{
+outline: 1px solid rgb(0, 65, 0);
+background-color: rgb(0, 12, 0);
+}
+
+
+.mainlogin button {
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 61, 0);
+    border-radius: 5px;
+    height: 40px;
+    width: 80%;
+    max-width: 300px;
+    border: none;
+    cursor: pointer;
+}
+.mainlogin button:active{
+    background-color: rgb(0, 24, 0);
 }
 .mainlogin p {
     color: red;
@@ -42,15 +67,18 @@
 .separador {
     height: 1px;
     width: 80%;
-    background-color: black;
+    max-width: 300px;
+    background-color: rgb(19, 72, 0);
     border-radius: 1px;
 }
 .toregister{
-    color: black;
-    border: 1px solid black;
+    color: rgb(7, 79, 0);
+    background-color: rgb(14, 14, 14);
     border-radius: 5px;
-    width: 100px;
-    height: 30px;
+    width: 80%;
+    border: 1px solid rgb(19, 72, 0);
+    max-width: 300px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
