--- a/src/components/FormRegister/FormRegister.css
+++ b/src/components/FormRegister/FormRegister.css
@@ -1,41 +1,61 @@
 .mainregister{
-    width: 250px;
-    height: auto;
-    background-color: white;
+    width: 100%;
+    height: 100%;
+    background-color: black;
     border: 1px solid black;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.588);
-    border-radius: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
-    padding: 10px;
-    gap: 20px;
+    justify-content: center;
 }
 .mainregister form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 20px;
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    padding: 20px;
+    border-radius: 10px;
 }
 .mainregister div {
     display: flex;
     flex-direction: column;
-}
-.mainregister h2, h3, label, input {
-    color: black;
-    font-size: 16px;
-}
-.mainregister input {
-    padding: 5px;
+    align-items: center;
+    width: 100%;
 }
 
-.mainregister button {
-    color: black;
+.mainregister input {
+    padding: 5px;
+    border: none;
+    background-color: rgb(28, 28, 28);
+    color: white;
     border-radius: 5px;
-    border: 1px solid black;
     height: 40px;
-    width: 100px;
+    width: 80%;
+    max-width: 300px;
+    padding-left: 20px;
+    font-style: italic;
+}
+.mainregister input:focus{
+    outline: 1px solid rgb(0, 65, 0);
+    background-color: rgb(0, 12, 0);
+    }
+
+.mainregister button {
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 61, 0);
+    border-radius: 5px;
+    height: 40px;
+    width: 80%;
+    max-width: 300px;
+    border: none;
+    cursor: pointer;
+}
+.mainregister button:active{
+    background-color: rgb(0, 24, 0);
 }
 .mainregister p {
     color: red;
