--- a/src/components/Song/Song.css
+++ b/src/components/Song/Song.css
@@ -54,7 +54,7 @@
     font-size: 12px;
     font-weight: 100;
     position: absolute;
-    z-index: 1000;
+    z-index: 100;
     right: 95px;
     top: 5px;
     bottom: 5px;
@@ -83,5 +83,9 @@
         font-weight: 100;
         
     }
+    .song_number, .duration{
+        display: none;
+    }
+
 }
 
