--- a/src/components/Song/Song.css
+++ b/src/components/Song/Song.css
@@ -3,7 +3,7 @@
     position: relative;
     height: 80px;
     width: 100%;
-    padding: 10px 50px 10px 10px;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -55,7 +55,7 @@
     font-weight: 100;
     position: absolute;
     z-index: 100;
-    right: 95px;
+    right: 50px;
     top: 5px;
     bottom: 5px;
     margin: auto;
@@ -67,7 +67,7 @@
 }
 .divlevels{
     position: absolute;
-    right: 10px;
+    right: 80px;
 }
 
 .duration{
@@ -85,6 +85,12 @@
     }
     .song_number, .duration{
         display: none;
+    }
+    .addsongList{
+        right: 10px;
+    }
+    .divlevels{
+        right: 40px;
     }
 
 }
