--- a/src/components/Album/Album.css
+++ b/src/components/Album/Album.css
@@ -3,7 +3,7 @@
 
 .album-container {
     -webkit-animation:fade-in 5.2s cubic-bezier(.39,.575,.565,1.000) both;animation:fade-in 1.2s cubic-bezier(.39,.575,.565,1.000) both;
-    width: 100%;
+    width: 240px;
     height: 100%;
     border-radius: 2px;
     transition: all .3s;
@@ -12,15 +12,24 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 5px;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
 
 }
 
 
-.album-container img{
-    width: 100%;
-    aspect-ratio: 1/1;
+.portada_del_album{
+    width: 200px;
+    height: 200px;
     object-fit: cover;
     border-radius: 100%;
+    box-shadow: 0 0 10px black;
+}
+.album_title {
+    font-size: 16px;
+    text-align: center;
 }
 
 
@@ -28,9 +37,23 @@
     #albums-container-title {
         display: none;
     }
+    .album-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        width: 100px;
+        height: 100%;
+        background-color: transparent;
+    }
+
     .album_title {
         font-size: 12px;
         text-align: center;
-        color: green;
+    }
+    .portada_del_album{
+
+        height: 100px;
+        width: 100px;
+        border-radius: 100%;
     }
 }
