--- a/src/pages/PanelAdmin/PanelAdmin.css
+++ b/src/pages/PanelAdmin/PanelAdmin.css
@@ -1,3 +1,63 @@
-.paneladmin h2 {
-    color: white;
+
+.mainadmin {
+    display: flex;
+    padding: 20px;
+    height: calc(100svh - 80px);
+    gap: 20px;
+    width: 100%;
+    
+}
+
+.aside {
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 100%;
+    padding: 20px;
+    gap: 10px;
+    border-radius: 10px;
+    justify-content: start;
+    background-color: rgb(30, 30, 30);
+}
+
+
+.asidebutton{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: 1px solid white;
+    border-radius: 5px;
+    height: 50px;
+    width: 150px;
+    cursor: pointer;
+    padding: 10px;
+}
+.asidebutton:hover{
+    background-color: rgb(0, 78, 0);
+}
+.contenedorAccion{
+    width: 100%;
+    height: 100%;
+
+}
+.albumsList, .songsList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    height: calc(100svh - 100px);
+    overflow-x: scroll;
+    padding-bottom: 20px;
+
+}
+.usersList {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    overflow-x: scroll;
+    height: 100%;
+    padding-bottom: 20px;
+    border-radius: 10px;
+
 }
