--- a/src/pages/PanelAdmin/PanelAdmin.css
+++ b/src/pages/PanelAdmin/PanelAdmin.css
@@ -39,6 +39,9 @@
 .contenedorAccion{
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 .albumsList, .songsList {
