estilos de formularios

--- a/src/components/SongCardEdit/SongCardEdit.css
+++ b/src/components/SongCardEdit/SongCardEdit.css
@@ -39,6 +39,9 @@
     object-fit: cover;
 
 }
+.SongCardEditform input {
+    color: black;
+}
 
 .botoneliminar:hover {
     background-color: red;
