--- a/src/components/AlbumCardEdit/AlbumCardEdit.css
+++ b/src/components/AlbumCardEdit/AlbumCardEdit.css
@@ -79,6 +79,9 @@
     align-items: center;
     z-index: 1000;
   }
+  .modal h4 {
+    font-size: 16px;
+  }
   
   .modal-content {
     background-color: #4a4a4a;
@@ -160,6 +163,10 @@
   .eliminarcancion{
     background-color: red;
     cursor: pointer;
+    border: none;
+    height: 30px;
+    width: 60px;
+    border-radius: 5px;
   }
   
   
