--- a/src/components/SongAdded/SongAdded.css
+++ b/src/components/SongAdded/SongAdded.css
@@ -1,6 +1,6 @@
 .songAdded_div{
-    width: 100px;
-    height: 50px;
+    width: 150px;
+    height: 80px;
     border: 1px solid green;
     text-align: center;
     border-radius: 5px;
@@ -8,14 +8,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 10px;
     background-color: rgb(0, 17, 0);
-    cursor: pointer;
+    
 ;
 }
 .songAdded_div h3{
-    font-size: 10px;
+    font-size: 16px;
 }
 .songAdded_div button{
-    background-color: transparent;
+    background-color: green;
+    height: 30px;
+    width: 70px;
+    border-radius: 5px;
     border: none;
+    cursor: pointer;
 }
